--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -56,9 +56,6 @@
 <script src="https://use.typekit.net/bkt6ydm.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-<link rel="stylesheet" href="./custom.css">
-
-
 
 
 
@@ -149,7 +146,7 @@ $.extend($.validator.messages, {
 });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 <!--End mc_embed_signup-->
-
+</div>
 	
 <div id="def-preFooter">
 </div>
