--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -72,7 +72,7 @@
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
 
 	.hp {
 
@@ -106,18 +106,17 @@ padding-left: 0 !important;
 <div id="mc_embed_signup">
 <form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=9d5271b4ca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Abonnez-vous à notre liste d’envoi!</h2>
 <div class="mc-field-group">
-	<label for="mce-EMAIL">Votre courriel
+	<label class="wb-inv" for="mce-EMAIL">Votre courriel
 </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Votre courriel">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5700d338d6ab413ebca1099f4_9d5271b4ca" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Abonnez-vous" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Abonnez-vous" name="subscribe" id="mc-embedded-subscribe" class="button hp"></div>
     </div>
 </form>
 </div>
@@ -147,6 +146,7 @@ $.extend($.validator.messages, {
 <!--End mc_embed_signup-->
 <!--End mc_embed_signup-->
 </div>
+<div class="clearfix"></div>
 	
 <div id="def-preFooter">
 </div>
