--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -63,7 +63,7 @@
 
 
 <h1>Abonnez-vous à notre liste d’envoi!</h1>
-
+<p>Abonnez-vous à notre liste d’envoi pour des renseignements au sujet des ateliers, des événements, des activités de recherche sur les utilisateurs et des tests de convivialité auxquels vous pourriez vouloir participer.</p>
 	
 <div class="col-md-8">	
 
@@ -119,6 +119,11 @@ padding-left: 0 !important;
     </div>
 </form>
 </div>
+
+<div class="mce-privacy" style="padding-top: 9px;">
+                    <a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" class="overlay-lnk light-link wb-lbx" aria-label="Énoncé de confidentialité">Énoncé de confidentialité</a>
+                </div>
+				
 <script type='text/javascript' src='s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone'; /*
  * Translated default messages for the $ validation plugin.
  * Locale: FR
@@ -145,6 +150,25 @@ $.extend($.validator.messages, {
 <!--End mc_embed_signup-->
 <!--End mc_embed_signup-->
 </div>
+
+<section class="mfp-hide modal-dialog modal-content overlay-def" id="privacy-notice-modal">
+    <header class="modal-header">
+        <h2 class="modal-title">Énoncé de confidentialité</h2>
+    </header>
+    <div class="modal-body">
+
+        <p>Notre fonction Bulletin de nouvelles fait appel &agrave;&nbsp;<a href="https://mailchimp.com/">Mailchimp</a>, une application tierce.&nbsp;L&rsquo;adh&eacute;sion est libre et est assujettie aux&nbsp;<a href="https://mailchimp.com/legal/terms/">Conditions d&rsquo;utilisation</a>&nbsp;associ&eacute;es &agrave; la plateforme Mailchimp.&nbsp;&nbsp;Au moment de l&rsquo;adh&eacute;sion, le syst&egrave;me enregistre votre adresse &eacute;lectronique et votre langue de pr&eacute;f&eacute;rence (anglais ou fran&ccedil;ais).&nbsp;Aucun autre renseignement personnel n&rsquo;est recueilli.</p>
+
+        <p>La collecte et l&rsquo;utilisation de vos renseignements personnels sont autoris&eacute;es par la&nbsp;<em>Loi sur la gestion des finances publiques</em>. La collecte et l&rsquo;utilisation de vos renseignements personnels aux fins du pr&eacute;sent site sont conformes &agrave; la&nbsp;<em>Loi f&eacute;d&eacute;rale sur la protection des renseignements personnels</em>. Vos&nbsp;renseignements personnels&nbsp;peuvent servir &agrave; r&eacute;pondre &agrave; vos demandes de renseignements, au besoin, et &agrave; &eacute;valuer l&rsquo;efficacit&eacute; avec laquelle les programmes du Secr&eacute;tariat du Conseil du Tr&eacute;sor&nbsp;(SCT)&nbsp;r&eacute;pondent aux besoins des clients. &nbsp;Dans des cas exceptionnels (p. ex., le cas de quelqu&rsquo;un qui fait des remarques inappropri&eacute;es ou des menaces), les renseignements personnels peuvent &ecirc;tre divulgu&eacute;s sans votre consentement conform&eacute;ment au paragraphe 8(2) de la&nbsp;<em>Loi sur la protection des renseignements personnels</em>.</p>
+
+        <p>Tout renseignement personnel&nbsp;qui pourra &ecirc;tre&nbsp;recueilli&nbsp;est&nbsp;d&eacute;crit&nbsp;dans&nbsp;le Fichier de renseignement personnel ordinaire intitul&eacute;&nbsp;<a href="http://www.infosource.gc.ca/emp/emp03-fra.asp#psu938">Activit&eacute;s de sensibilisation, POU 938</a> qui figure sur&nbsp;la page Web&nbsp;du SCT&nbsp;intitul&eacute;e&nbsp;<a href="https://www.canada.ca/fr/secretariat-conseil-tresor/services/acces-information-protection-reseignements-personnels/acces-information/renseignements-programmes-fonds-renseignements/fichiers-renseignements-personnels-ordinaires.html"><em>Renseignements sur les programmes et les fonds de renseignements</em></a>.</p>
+
+        <p>Pour transmettre vos questions, commentaires ou pr&eacute;occupations concernant le pr&eacute;sent avis, vos droits en mati&egrave;re de protection des renseignements personnels ou la&nbsp;<em>Loi sur la protection des renseignements personnels</em>, communiquez avec le coordonnateur de l&rsquo;acc&egrave;s &agrave; l&rsquo;information et de la protection des renseignements personnels du SCT, &agrave;&nbsp;<a href="mailto:atip.aiprp@tbs-sct.gc.ca">atip.aiprp@tbs-sct.gc.ca</a>, ou en composant le&nbsp;1-866-312-1511. Vous pouvez aussi communiquer avec le Commissariat &agrave; la protection de la vie priv&eacute;e du Canada par courriel, &agrave;&nbsp;<a href="mailto:info@priv.gc.ca">info@priv.gc.ca</a>, ou par t&eacute;l&eacute;phone, au&nbsp;1-800-282-1376. Vous avez &eacute;galement la possibilit&eacute; de d&eacute;poser une plainte aupr&egrave;s du Commissariat &agrave; la protection de la vie priv&eacute;e du Canada quant &agrave; la fa&ccedil;on dont le SCT traite vos renseignements personnels.</p>
+
+    </div>
+
+</section>
+
 <div class="clearfix"></div>
 	
 <div id="def-preFooter">
