--- a/pages/signup.html
+++ b/pages/signup.html
@@ -64,8 +64,8 @@
 <main role="main" property="mainContentOfPage" class="container">
 
 
-	<h1>Subscribe to our mailing list!</h1>
-
+	<h1>Join our mailing list!</h1>
+<p>Sign up to our mailing list to find out about workshops, events, user research and usability testing activities that you may want to participate in.</p>
 
 	
 <div class="col-md-8">	
@@ -124,7 +124,26 @@ padding-left: 0 !important;
 </form>
 </div>
 
+ <div class="mce-privacy" style="padding-top: 9px;">
+                    <a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" class="overlay-lnk light-link wb-lbx" aria-label="Privacy Statement Link">Privacy Notice</a>
+                </div>
+		
 
+<section class="mfp-hide modal-dialog modal-content overlay-def" id="privacy-notice-modal">
+    <header class="modal-header">
+        <h2 class="modal-title">Privacy Notice</h2>
+    </header>
+    <div class="modal-body">
+        <p>Our newsletter feature uses <a href="https://mailchimp.com/">Mailchimp</a>, a third-party application. Sign-up is voluntary and subject to the <a href="https://mailchimp.com/legal/terms/">Terms of Use</a> for the Mailchimp platform.  When you sign up, your email address and language preference (English or French) is collected. No other personal information is collected.</p>
+
+        <p>The collection and use of your personal information is authorized by the <em>Financial Administration Act</em>. Collection and use of your personal information for this site is in accordance with the federal <em>Privacy Act</em>. Your personal information may be used to respond to your inquiries, if applicable, and to help evaluate the effectiveness of Treasury Board of Canada Secretariat (TBS) programs in responding to client needs. In exceptional circumstances (e.g., individuals who make inappropriate remarks or threats), personal information may be disclosed without your consent pursuant to subsection 8(2) of the <em>Privacy Act</em>.</p>
+
+        <p>Any personal information that may be collected is described in the Standard Personal Information Bank entitled <a href="http://www.infosource.gc.ca/emp/emp03-eng.asp#psu938">Outreach Activities, PSU 938</a>, which can be found in the TBS webpage <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings.html">Information about programs and information holdings</a>.</p>
+
+        <p>Any questions, comments, concerns or complaints you may have regarding this Statement, your privacy rights and the Privacy Act may be directed to the TBS Access to Information and Privacy Coordinator by email at <a href="mailto:ATIP.AIPRP@TBS-SCT.gc.ca">ATIP.AIPRP@tbs-sct.gc.ca</a> or by telephone at 1-866-312-1511. You may also wish to contact the Office of the Privacy Commissioner of Canada by email at <a href="mailto:info@priv.gc.ca">info@priv.gc.ca</a> or by telephone at 1-800-282-1376. You have the right to complain to the Office of the Privacy Commissioner of Canada about the handling of your personal information by TBS.</p>
+    </div>
+</section>
+		
 </div>
 <div class="clearfix"></div>
 <script type='text/javascript' src='s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
