--- a/pages/draft-whatwedo.html
+++ b/pages/draft-whatwedo.html
@@ -116,8 +116,8 @@ make it easier!</p>
                     </div>
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-							<details  >
-                      <summary>  <h3 class="timeline-title">Starting a business: Registering your company</h3> <div ><div></summary>
+							<details class="details-custom" >
+                      <summary class="borderless">  <h3 class="timeline-title">Starting a business: Registering your company</h3> <div class="summary-custom"><div></summary>
 
 <h4>Partner departments</h4>
 
