--- a/pages/draft-whatwedo-2.html
+++ b/pages/draft-whatwedo-2.html
@@ -73,26 +73,7 @@ for you to find and understand our services on Canada.ca. Federal departments ar
 make it easier!</p>
 
 
-	<div class="table-bravo">
-	       <table class="table table-bordered">
-
-	<thead><tr class="bg-primary"><th scope="col">Project goals</th>
-	<th scope="col">Project targets</th>
-	<th scope="col">Outcomes for Canadians</th>
-
-</tr></thead><tbody><tr><td><b>Findability</b>: top task information is easy to find on Canada.ca</td>
-	<td>A 20% incease in average task findability, or a findability rate of 80% </td>
-	<td>Canadians spend less time looking for information on Canada.ca</td>
-	</tr>
-
-	<tr><td><b>Completion</b>: top task information is easy to understand on Canada.ca</td>
-		<td>A 20% incease in average task Completion, or a completion rate of 80% </td>
-		<td>Canadians understand the information they find on Canada.ca</td>
-
-
-		</tr>
-</tbody></table>
-
+<p>Our project goals for optimization projects are centered about findability and completion success by the people who use these services. Before we launch our new optimized designs we ensure that there is at least a 20% increase of task findability and completion during out testing. This ensures that Canadians spend less time looking for the information they need on Canada.ca and once they find this information it is much easier to understand.</p>
 
 
 
@@ -129,7 +110,8 @@ make it easier!</p>
 
 <h4>Project outcomes</h4>
 
-	<p>More Canadians understand the Government of Canada requirements for starting a business.</p>
+	<p>More Canadians understand the Government of Canada requirements for starting a business. <a class="wb-lbx" title="business-tab" href="#busi-1">View the tasks we improved.</a></p>
+
 
 	<div class="table-bravo">
 				 <table class="table table-bordered">
@@ -144,20 +126,31 @@ make it easier!</p>
 
 	</tr></tbody></table>
 
-<h4>Tasks improved</h4>
-
-<ul class="custul">
-	<li class="custli">Imagine you are going to start a home business in Winnipeg, part-time as a consultant. Find out what you can find out about any essential legal steps in that process.</li>
-	<li class="custli">You want to name your new business ‘SOMOS’. Check if it is legal or illegal for you to start using that name.</li>
-	<li class="custli">You expect to earn about $1,000 a month from your new business for the first six months. Find out whether you must charge GST to your customers.</li>
-	<li class="custli">Your first employee starts work next month. Find out if there is an official step you must take before or very soon after you cut their first paycheque.</li>
-	<li class="custli">Your business needs to start collecting GST. Find the official first step you must take.</li>
-	<li class="custli">You have decided to incorporate your business. Is it possible to submit the application form online, and if so, how much it will cost?</li>
-</ul>
-
-<br>
 
 <p><a href="">View project</a></p>
+
+
+<div class="mwsgeneric-base-html parbase section">
+
+
+																<section id="busi-1" class="mfp-hide modal-dialog modal-content overlay-def">
+																								<header class="modal-header" style="background-color: #2e5274 !important;">
+																																<h3 class="modal-title">Tasks improved: Starting a business</h3>
+																								</header>
+<div class="modal-body" style="background-color: white !important;">
+
+	<ul class="custul">
+		<li class="custli">Imagine you are going to start a home business in Winnipeg, part-time as a consultant. Find out what you can find out about any essential legal steps in that process.</li>
+		<li class="custli">You want to name your new business ‘SOMOS’. Check if it is legal or illegal for you to start using that name.</li>
+		<li class="custli">You expect to earn about $1,000 a month from your new business for the first six months. Find out whether you must charge GST to your customers.</li>
+		<li class="custli">Your first employee starts work next month. Find out if there is an official step you must take before or very soon after you cut their first paycheque.</li>
+		<li class="custli">Your business needs to start collecting GST. Find the official first step you must take.</li>
+		<li class="custli">You have decided to incorporate your business. Is it possible to submit the application form online, and if so, how much it will cost?</li>
+	</ul>
+
+</div>
+</section>
+	</div>
 							</details>
 
 
