--- a/pages/draft-whatwedo-2.html
+++ b/pages/draft-whatwedo-2.html
@@ -127,7 +127,7 @@ make it easier!</p>
 	</tr></tbody></table>
 
 
-<p><a href="">View project</a></p>
+<p><a href="">Read more</a></p>
 
 
 <div class="mwsgeneric-base-html parbase section">
