--- a/pages/signup.html
+++ b/pages/signup.html
@@ -64,7 +64,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 
 
-	<h1>Join our mailing list!</h1>
+	<h1>Sign up to the Digital Transformation Office mailing list!</h1>
 <p>Sign up to our mailing list to find out about workshops, events, user research and usability testing activities that you may want to participate in.</p>
 
 	
