--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -123,12 +123,12 @@ make it easier!</p>
                     </div>
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-							<details class="details-custom" >
-                      <summary class="borderless">  <h3 class="timeline-title">Starting a business **DESIGN 1***</h3> <div class="summary-custom"><div></summary>
+							<details class="" style="">
+                      <summary class="borderless" style="padding-top: 15px !important;">  <h3 class="timeline-title">Starting a business **DESIGN 1***</h3> <div class="summary-custom"><div></summary>
 
 <h4>Partner departments</h4>
 
-	<p style="padding-top: 8px;">Canada Revenue Agency; Innovation, Science and Economic Development Canada</p>
+	<p style="padding-top: 8px;">Canada Revenue Agency & Innovation, Science and Economic Development Canada</p>
 
 <h4>Why this work matters</h4>
 
@@ -140,9 +140,9 @@ make it easier!</p>
 
 
 
-	<p style="padding-bottom: 8px; padding-top: 8px;">It is now...</p>
+	<p style="padding-bottom: 11px; padding-top: 8px;">It is now...</p>
 <span class="improvement">36%</span>
-	<p style="max-width: 18em; padding-top: 5px;">easier for Canadians to understand the Government of Canada requirements for starting a business.</p>
+	<p style="max-width: 35em; padding-top: 10px;">easier for Canadians to understand the Government of Canada requirements for starting a business.</p>
 
 	<div class="table-bravo">
 	<table class="table" style="margin-left: -5px !important; margin-bottom: 5px; max-width: 25em;">
@@ -186,8 +186,8 @@ make it easier!</p>
 							</details>
 
 
-							<details class="details-custom" >
-											<summary class="borderless">  <h3 class="timeline-title">Starting a business **DESIGN 2***</h3> <div class="summary-custom"><div></summary>
+							<details class="" >
+											<summary class="borderless" style="padding-top: 15px !important;">  <h3 class="timeline-title">Starting a business **DESIGN 2***</h3> <div class="summary-custom"><div></summary>
 
 						<h4>Partner departments</h4>
 
