--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -62,7 +62,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 
 
-<h1>Abonnez-vous à la liste d’envoi du Bureau de la transformation numérique!</h1>
+<h1>Abonnez-vous à la liste d’envoi du Bureau de la transformation numérique</h1>
 <p>Abonnez-vous à notre liste d’envoi pour des renseignements au sujet des ateliers, des événements, des activités de recherche sur les utilisateurs et des tests de convivialité auxquels vous pourriez vouloir participer.</p>
 	
 <div class="col-md-8">	
