--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Join our mailing list!</title>
+		<title>DTO mailing list</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
