--- a/pages/signup.html
+++ b/pages/signup.html
@@ -116,7 +116,7 @@ padding-left: 0 !important;
 <div class="mc-field-group input-group">
     <strong>Email Format </strong>
     <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
-<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">plain text</label></li>
+<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">plain-text (we recommend plain-text for government organizations, because firewalls sometimes block html)</label></li>
 </ul>
 </div>
 	<div id="mce-responses" class="clear">
