--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -64,16 +64,14 @@
 
 <h1>Abonnez-vous à la liste d’envoi du Bureau de la transformation numérique</h1>
 <p>Abonnez-vous à notre liste d’envoi pour des renseignements au sujet des ateliers, des événements, des activités de recherche sur les utilisateurs et des tests de convivialité auxquels vous pourriez vouloir participer.</p>
-	
-<div class="col-md-8">	
 
-	<!-- Begin MailChimp Signup Form -->
+<div class="col-md-8">	
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-
-	.hp {
+	   
+	   .hp {
 
 text-align: left !important;
 color: white !important;
@@ -100,25 +98,39 @@ background-color: #284162 !important;
 padding-left: 0 !important;
 
 }
-
 </style>
 <div id="mc_embed_signup">
 <form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=9d5271b4ca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
+
+
 <div class="mc-field-group">
 	<label class="wb-inv" for="mce-EMAIL">Votre courriel
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Votre courriel">
 </div>
+
+
+<div class="mc-field-group input-group">
+    <strong>Votre format préféré  </strong>
+    <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">HTML</label></li>
+<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">texte clair</label> (Nous recommandons texte clair au cas où votre pare-feu bloque le HTML)</li>
+</ul>
+</div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5700d338d6ab413ebca1099f4_9d5271b4ca" tabindex="-1" value=""></div>
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5700d338d6ab413ebca1099f4_c6bb0b9f64" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Abonnez-vous" name="subscribe" id="mc-embedded-subscribe" class="button hp"></div>
     </div>
 </form>
-</div>
+
+
+
+
+
+
 
 <div class="mce-privacy" style="padding-top: 9px;">
                     <a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" class="overlay-lnk light-link wb-lbx" aria-label="Énoncé de confidentialité">Énoncé de confidentialité</a>
@@ -148,7 +160,7 @@ $.extend($.validator.messages, {
         min: $.validator.format("Veuillez entrer une valeur supérieure ou égale à {0}.")
 });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-<!--End mc_embed_signup-->
+
 </div>
 
 <section class="mfp-hide modal-dialog modal-content overlay-def" id="privacy-notice-modal">
@@ -169,6 +181,8 @@ $.extend($.validator.messages, {
 
 </section>
 
+</div>
+
 <div class="clearfix"></div>
 	
 <div id="def-preFooter">
@@ -177,7 +191,7 @@ $.extend($.validator.messages, {
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "le 4 avril 2018",
+		dateModified: "le 20 avril 2018",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
