--- a/pages/signup.html
+++ b/pages/signup.html
@@ -116,7 +116,7 @@ padding-left: 0 !important;
 <div class="mc-field-group input-group">
     <strong>Email Format </strong>
     <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">HTML</label></li>
-<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">plain text</label> (we recommend plain text as your firewall may block html)</li>
+<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">plain text</label> (We recommend plain text as your firewall may block html)</li>
 </ul>
 </div>
 	<div id="mce-responses" class="clear">
@@ -130,72 +130,6 @@ padding-left: 0 !important;
 </div>
 <script type='text/javascript' src='s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-
-
-<!-- 
-	
-<div class="col-md-8">	
-
-
-	<!-- Begin MailChimp Signup Form -->
-	
-	<!--
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-
-.hp {
-
-text-align: left !important;
-color: white !important;
-background-color: #335075 !important;
-
-}
-
- a.hp:visited {
-
-color: white !important;
-background-color: #335075 !important;
-
-}
-
- a.hp:hover {
-
-color: white !important;
-background-color: #284162 !important;
-
-}
-	
-.paddingc {
-
-padding-left: 0 !important;
-
-}
-
-</style>
-<div id="mc_embed_signup">
-<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-
-<div class="mc-field-group">
-	<label class="wb-inv" for="mce-EMAIL">Email Address 
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
- <!--   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5700d338d6ab413ebca1099f4_c6bb0b9f64" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button hp"></div>
-    </div>
-</form>
-</div>
-
-
--->
-
-
 
 
 
@@ -221,8 +155,6 @@ padding-left: 0 !important;
 		
 </div>
 <div class="clearfix"></div>
-<!-- <script type='text/javascript' src='s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script> -->
-<!--End mc_embed_signup-->
 
 	
 <div id="def-preFooter">
