--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -111,7 +111,7 @@ make it easier!</p>
 	<h2>Projects with our partners</h2>
 
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-8">
+        <div class="col-xs-12 col-sm-12 col-md-8" style="padding-left: 3px !important; padding-right: 3px !important;">
             <ul class="timeline">
 
 			   <ul class="timeline">
@@ -182,8 +182,8 @@ make it easier!</p>
 							
 
 
-	<details>
-											<summary class="borderless" style="padding-top: 15px !important;">  <h3 class="timeline-title">Starting a business **DESIGN 2***</h3> <div class="summary-custom"><div></summary>
+	<details >
+											<summary class="borderless">  <h3 class="timeline-title">Starting a business **DESIGN 2***</h3> <div class="summary-custom"><div></summary>
 
 						<h4>Partner departments</h4>
 
@@ -205,9 +205,9 @@ make it easier!</p>
 						<th scope="col">Improvement to task success</th>
 
 					</tr></thead><tbody><tr>
-						<td style="padding-top: 22px !important;">52%</td>
-						<td style="padding-top: 22px !important;">88%</td>
-						<td><p class="improvement" style="margin-top: -10px; font-size: 50px !important; font-weight: medium !important;"><span style="font-size: 30px !important;">+</span>36%<span style="font-size: 30px !important;"> pts</span></p></td>
+						<td style="padding-top: 10px !important;">52%</td>
+						<td style="padding-top: 10px !important;">88%</td>
+						<td><p class="improvement" style="margin-top: -10px; font-size: 35px !important; font-weight: medium !important;"><span style="font-size: 15px !important;">+</span>36%<span style="font-size: 15px !important;">pts</span></p></td>
 						</tr></tbody></table>
 
 
