--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -139,7 +139,7 @@ make it easier!</p>
 
 
 				<p style="padding-bottom: 11px; padding-top: 8px;">It is now...</p>
-<span class="improvement"><span style="font-size: 30px !important;">+</span>36%</span><span style="font-size: 30px !important; color: green;"> pts</span>
+<span class="improvement">+36</span><span style="font-size: 30px !important; color: green;">%pts</span>
 
 
 	<p style="max-width: 35em; padding-top: 10px;">easier for Canadians to understand the Government of Canada requirements for starting a business.</p>
@@ -205,9 +205,9 @@ make it easier!</p>
 						<th scope="col">Improvement to task success</th>
 
 					</tr></thead><tbody><tr>
-						<td style="padding-top: 10px !important;">52%</td>
-						<td style="padding-top: 10px !important;">88%</td>
-						<td><p class="improvement" style="margin-top: -10px; font-size: 35px !important; font-weight: medium !important;"><span style="font-size: 15px !important;">+</span>36%<span style="font-size: 15px !important;">pts</span></p></td>
+						<td style="padding-top: 13px !important;">52%</td>
+						<td style="padding-top: 13px !important;">88%</td>
+						<td><p class="improvement" style="margin-top: -10px; font-size: 33px !important; font-weight: medium !important;">+36<span style="font-size: 18px !important;">%pts</span></p></td>
 						</tr></tbody></table>
 
 
