--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -65,11 +65,11 @@
 
 <h1>Projects overview</h1>
 
-	<p>Small changes make a big difference!</p>
+	<p>Small changes make a big difference.</p>
 
 	<p>Sometimes the words we use can make it hard
 for you to find and understand our services on Canada.ca. Federal departments and the Digital Transformation Office are working to
-make it easier!</p>
+make it easier.</p>
 
 
 <div class="table-bravo">
@@ -80,12 +80,12 @@ make it easier!</p>
 <th scope="col">Outcomes for Canadians</th>
 
 </tr></thead><tbody><tr><td><b>Findability</b>: top task information is easy to find on Canada.ca</td>
-<td>A 20% incease in average task findability, or a findability rate of 80% </td>
+<td>A 20% increase in average task findability, or a findability rate of 80% </td>
 <td>Canadians spend less time looking for information on Canada.ca</td>
 </tr>
 
 <tr><td><b>Completion</b>: top task information is easy to understand on Canada.ca</td>
-	<td>A 20% incease in average task Completion, or a completion rate of 80% </td>
+	<td>A 20% increase in average task Completion, or a completion rate of 80% </td>
 	<td>Canadians understand the information they find on Canada.ca</td>
 
 
@@ -145,7 +145,7 @@ make it easier!</p>
 						</tr></tbody></table>
 
 
-					<h4 style="margin-top: 0px;">Tasks improved:</h4>
+					<h4 style="margin-top: 0px;">Tasks improved</h4>
 
 						<div>
 
@@ -171,7 +171,7 @@ make it easier!</p>
 
 			<h4>Partner departments</h4>
 
-			<p>Immigration, Refugees and Citizenship Canada; Canada Border Services Agency</p>
+			<p>Immigration, Refugees and Citizenship Canada</p>
 
 			<h4>Why this work matters</h4>
 
@@ -197,7 +197,7 @@ make it easier!</p>
 									</table>
 
 
-				<h4 style="margin-top: 0px;">Tasks improved:</h4>
+				<h4 style="margin-top: 0px;">Tasks improved</h4>
 
 												<div>
 
@@ -257,7 +257,7 @@ make it easier!</p>
 										</table>
 
 
-			<h4 style="margin-top: 0px;">Tasks improved:</h4>
+			<h4 style="margin-top: 0px;">Tasks improved</h4>
 
 
 														<div>
@@ -325,7 +325,7 @@ make it easier!</p>
 															  </table>
 
 
-					<h4 style="margin-top: 0px;">Tasks improved:</h4>
+					<h4 style="margin-top: 0px;">Tasks improved</h4>
 
 																<div>
 
@@ -385,7 +385,7 @@ make it easier!</p>
 																						</tr></tbody></table>
 
 
-						<h4 style="margin-top: 0px;">Tasks improved:</h4>
+						<h4 style="margin-top: 0px;">Tasks improved</h4>
 
 																						<div>
 
@@ -439,7 +439,7 @@ make it easier!</p>
 																												</tr></tbody></table>
 
 
-							<h4 style="margin-top: 0px;">Tasks improved:</h4>
+							<h4 style="margin-top: 0px;">Tasks improved</h4>
 
 																												<div>
 
