--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -68,7 +68,7 @@
 	<p>Small changes make a big difference.</p>
 
 	<p>Sometimes the words we use can make it hard
-for you to find and understand our services on Canada.ca. Federal departments and the Digital Transformation Office are working to
+for you to find and understand our services on Canada.ca. Federal departments and the Digital Transformation Office are working together to
 make it easier.</p>
 
 
@@ -169,18 +169,18 @@ make it easier.</p>
 <details>
 						<summary class="borderless">  <h3 class="timeline-title">Visit Canada</h3> <div class="summary-custom"><div></summary>
 
-			<h4>Partner departments</h4>
+			<h4>Partner department</h4>
 
 			<p>Immigration, Refugees and Citizenship Canada</p>
 
 			<h4>Why this work matters</h4>
 
-			<p>X</p>
+			<p>IRCC processes about 1 million Visa applications each year. They expect 3.2 million Electronic Travel Authorization applications in the next year. </p>
 
 
 			<h4>Outcomes</h4>
 
-			<p>X</p>
+			<p>Potential visitors to Canada can better understand what documentation they need to enter.</p>
 
 			<div class="table-bravo">
 								<table class="table table-slim">
@@ -233,12 +233,12 @@ make it easier.</p>
 
 	<h4>Why this work matters</h4>
 
-		<p>X</p>
+		<p>There are more than 550 million visits to weather.gc.ca annually.</p>
 
 
 	<h4>Outcomes</h4>
 
-		<p>X</p>
+		<p>Canadians are better prepared for high impact weather conditions.</p>
 
 
 		<div class="table-bravo">
@@ -264,10 +264,10 @@ make it easier.</p>
 
 														<ul class="custul">
 														<li class="custli">What will the weather be like in your area for the rest of the day?</li>
-														<li class="custli">You heard there is rain coming but you want to cycle to/home from work. Find out when the probability of rain is the highest so you can avoid those times</li>
-														<li class="custli">You need to drive to Toronto. Decide whether to take the 401 or Hwy 7</li>
+														<li class="custli">You heard there is rain coming but you want to cycle to/home from work. Find out when the probability of rain is the highest so you can avoid those times.</li>
+														<li class="custli">It's Sunday morning, and you need to drive to Kingston for a Monday noon meeting. Should you leave this evening, or tomorrow morning?</li>
 														<li class="custli">Hail would rip holes in your expensive tent. Should you rush to pack up your camp site this morning or take your time this evening?</li>
-														<li class="custli">You want to take the the dog for a short walk before it rains. Is already raining anywhere in the Ottawa area yet (yes/no)?</li>
+														<li class="custli">You want to take the the dog for a short walk before it rains. It is already raining anywhere in the Ottawa area yet (yes/no)?</li>
 														<li class="custli">You are the golf course manager - the sky looks dark. Find out (yes/no) whether you should clear the course because of the potential of lightning in the next 10-20 minutes</li>
 														</ul>
 
@@ -302,11 +302,11 @@ make it easier.</p>
 
 						<h4>Why this work matters</h4>
 
-						<p>X</p>
+						<p>Flu cases result in approximately 12 thousand hospitalizations in Canada each year. </p>
 
 						<h4>Outcomes</h4>
 
-						<p>X</p>
+						<p>Canadians can more easily find and interpret disease symptoms and immunization guidelines.</p>
 
 						<div class="table-bravo">
 
@@ -319,7 +319,7 @@ make it easier.</p>
 															</tr></thead><tbody><tr>
 																<td class="table-smnum">50%</td>
 																<td class="table-smnum">84%</td>
-																<td><p class="improvement">+35<span class="pts">%pts</span></p></td>
+																<td><p class="improvement">+34<span class="pts">%pts</span></p></td>
 																</tr></tbody>
 
 															  </table>
@@ -330,16 +330,16 @@ make it easier.</p>
 																<div>
 
 												<ul class="custul">
-												<li class="custli">This year's flu season could be worse than usual. Find the government’s advice on the most important way to avoid getting the flu</li>
-												<li class="custli">Your friend put up a post urging her friends not to vaccinate their kids because of the risk of autism. Find some answers that would make you feel ready to discuss it with her</li>
+												<li class="custli">This year's flu season could be worse than usual. Find the government’s advice on the most important way to avoid getting the flu.</li>
+												<li class="custli">Your friend put up a post urging her friends not to vaccinate their kids because of the risk of autism. Find some answers that would make you feel ready to discuss it with her.</li>
 												<li class="custli">You got a few mosquito bites on your honeymoon down south but you feel fine. Before getting pregnant, you want to make sure you don’t have Zika. Is there a test that can tell if you're infected?</li>
 												<li class="custli">You plan to start a family soon, but want a sunny vacation first. Which of the countries below should you avoid because of the risk of Zika?</li>
 												<li class="custli">Your baby was born on the first of this month. At what age is the first set of vaccinations recommended?</li>
-												<li class="custli">It is flu season and a family member is pregnant. Find out whether or not she should get a flu shot while pregnant</li>
-												<li class="custli">You don't want to miss work tomorrow but should stay away if you have the flu. Yesterday, all of the symptoms below hit: find out which ones are the signal that it's the flu</li>
+												<li class="custli">It is flu season and a family member is pregnant. Find out whether or not she should get a flu shot while pregnant.</li>
+												<li class="custli">You don't want to miss work tomorrow but should stay away if you have the flu. Yesterday, all of the symptoms below hit: find out which ones are the signal that it's the flu.</li>
 												<li class="custli">You think you heard something on the news about people being sick in Italy. Is there a particular concern you should be aware of before you go with your baby?</li>
 												<li class="custli">You are planning a trip to Mexico. Which specific vaccinations are recommended before you go?</li>
-												<li class="custli">The weekly flu report says most cases are an H3N2 flu. Find out if that particular flu is in this year's vaccine in Canada to help persuade your partner to get a flu shot</li>
+												<li class="custli">The weekly flu report says most cases are an H3N2 flu. Find out if that particular flu is in this year's vaccine in Canada to help persuade your partner to get a flu shot.</li>
 																</ul>
 
 																<br>
@@ -358,17 +358,17 @@ make it easier.</p>
 <details >
 								<summary class="borderless">  <h3 class="timeline-title">Tax filing</h3> <div class="summary-custom"><div></summary>
 
-						<h4>Partner departments</h4>
+						<h4>Partner department</h4>
 
 						<p>Canada Revenue Agency</p>
 
 						<h4>Why this work matters</h4>
 
-						<p>X</p>
+						<p>There are 5.4  million active GST/HST accounts in Canada, and more than 1.7 million active payroll accounts. </p>
 
 						<h4>Outcomes</h4>
 
-						<p>X</p>
+						<p>Canadian businesses can more easily fulfill their GST/HST and payroll requirements.</p>
 
 											<div class="table-bravo">
 
@@ -381,7 +381,7 @@ make it easier.</p>
 																					</tr></thead><tbody><tr>
 																						<td class="table-smnum">34%</td>
 																						<td class="table-smnum">72%</td>
-																						<td><p class="improvement">+37<span class="pts">%pts</span></p></td>
+																						<td><p class="improvement">+38<span class="pts">%pts</span></p></td>
 																						</tr></tbody></table>
 
 
@@ -413,17 +413,17 @@ make it easier.</p>
 <details >
 								<summary class="borderless">  <h3 class="timeline-title">Employment Insurance special benefits</h3> <div class="summary-custom"><div></summary>
 
-									<h4>Partner departments</h4>
+									<h4>Partner department</h4>
 
 									<p>Employment and Social Development Canada</p>
 
 									<h4>Why this work matters</h4>
 
-									<p>X</p>
+									<p>Thousands of Canadians receive the family caregiver and compassionate care benefits each year.</p>
 
 									<h4>Outcomes</h4>
 
-									<p>X</p>
+									<p>Canadians can more easily find out if they are eligible to receive caregiver benefits when looking after loved ones who are sick or dying.</p>
 
 															<div class="table-bravo">
 																												<table class="table table-slim">
@@ -433,9 +433,9 @@ make it easier.</p>
 																												<th scope="col">Improvement to task success</th>
 
 																											</tr></thead><tbody><tr>
-																												<td class="table-smnum">#%</td>
-																												<td class="table-smnum">#%</td>
-																												<td><p class="improvement"><span class="pts">#%pts</span></p></td>
+																												<td class="table-smnum">52%</td>
+																												<td class="table-smnum">79%</td>
+																												<td><p class="improvement"><span class="pts">27%pts</span></p></td>
 																												</tr></tbody></table>
 
 
