--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Projects overview</title>
+		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-fr.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+		<title>Tâches principales pour Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js"></script>
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-en.js"></script>
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-fr.js"></script>
 
 		<!-- Write closure template -->
 		<script type="text/javascript">
@@ -36,16 +36,16 @@
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
-					lang: "fr",
-					href: "apercu-projet.html",
-					text: "Français"
+					lang: "en",
+					href: "projectoverview.html",
+					text: "English"
 				}],
 				breadcrumbs: [{
-					title: "Home",
-					href: "https://www.canada.ca/en.html"
+					title: "Accueil",
+					href: "https://www.canada.ca/fr.html"
 				},{
-					title: "About Canada.ca",
-					href: "https://www.canada.ca/en/government/about.html"
+					title: "Au sujet de Canada.ca",
+					href: "https://www.canada.ca/fr/gouvernement/a-propos.html"
 				}],
 				search: true,
 				siteMenu: true,
@@ -53,13 +53,7 @@
 			});
 </script>
 
-<script src="https://use.typekit.net/bkt6ydm.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
-
 <link rel="stylesheet" href="../css/blog.css">
-
-
-
 
 <main role="main" property="mainContentOfPage" class="container">
 
@@ -497,9 +491,6 @@ make it easier.</p>
         </div>
     </div>
 
-
-<div id="def-preFooter">
-</div>
 <!-- Write closure template -->
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
