--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -491,11 +491,13 @@ make it easier.</p>
         </div>
     </div>
 
+<div id="def-preFooter">
+</div>
 <!-- Write closure template -->
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2017-12-07",
+		dateModified: "le 25 avril 2018",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
