--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -63,34 +63,18 @@
 
 <main role="main" property="mainContentOfPage" class="container">
 
-<h1>Projects overview</h1>
+<h1>Projects to improve Canada.ca</h1>
 
 	<p>Small changes make a big difference.</p>
 
-	<p>Sometimes the words we use can make it hard
-for you to find and understand our services on Canada.ca. Federal departments and the Digital Transformation Office are working together to
-make it easier.</p>
+	<p>
+Sometimes the words we use, and how we organize them, can make it hard for people to find and understand Government of Canada information and services on Canada.ca. The <abbr title="Treasury Board of Canada Secretariat">TBS</abbr> Digital Transformation Office is working on projects with federal departments to make it easier.</p>
 
+<p>To ensure Canada.ca content is improving with each project, we co-create prototypes, set concrete usability targets, and run usability tests with Canadians to see if the prototypes result in an improvement or not. </p>
 
-<div class="table-bravo">
-			 <table class="table">
+<p>For a prototype to launch, it has to show that it is at least 20% easier for Canadians to accomplish the task of getting the right answers to questions they are likely to have about specific <abbr title="Government of Canada">GC</abbr> services. </p>
 
-<thead><tr class=""><th scope="col">Project goals</th>
-<th scope="col">Project targets</th>
-<th scope="col">Outcomes for Canadians</th>
-
-</tr></thead><tbody><tr><td><b>Findability</b>: top task information is easy to find on Canada.ca</td>
-<td>A 20% increase in average task findability, or a findability rate of 80% </td>
-<td>Canadians spend less time looking for information on Canada.ca</td>
-</tr>
-
-<tr><td><b>Completion</b>: top task information is easy to understand on Canada.ca</td>
-	<td>A 20% increase in average task Completion, or a completion rate of 80% </td>
-	<td>Canadians understand the information they find on Canada.ca</td>
-
-
-	</tr>
-</tbody></table>
+<p>Considering the high numbers of page visits to some the Government of Canada’s Top Tasks, such an increase in task success rates is significant. Ultimately it means people spending less time looking for the answers they need from the Government of Canada.</p>
 
 
 
@@ -123,13 +107,18 @@ make it easier.</p>
 
 						<p>Canada Revenue Agency; Innovation, Science and Economic Development Canada</p>
 
+						<h4>Objective</h4>
+
+						<p>Combine information from across departments so that Canadians easily get the whole picture on what the Government of Canada requires when starting a business.
+</p>
+
+
 						<h4>Why this work matters</h4>
-
-						<p>Approx. **k new small and medium enterprises start up each year.</p>
-
-
-						<h4>Outcomes</h4>
-				<p>Now more Canadians understand the Government of Canada requirements for starting a business.</p>
+				
+						<ul>
+				<li class="custli">Approximately 40,000 new small and medium enterprises start up each year</li>
+				</ul>
+			<br>
 
 						<div class="table-bravo">
 						<table class="table table-slim">
@@ -145,7 +134,7 @@ make it easier.</p>
 						</tr></tbody></table>
 
 
-					<h4 style="margin-top: 0px;">Tasks improved</h4>
+					<h4 style="margin-top: 0px;">Task scenarios tested and improved</h4>
 
 						<div>
 
@@ -173,14 +162,18 @@ make it easier.</p>
 
 			<p>Immigration, Refugees and Citizenship Canada</p>
 
+			<h4>Objective</h4>
+
+			<p>To help those potential visitors to Canada to clearly understand what documentation is required to enter.</p>
+
+
 			<h4>Why this work matters</h4>
-
-			<p>IRCC processes about 1 million Visa applications each year. They expect 3.2 million Electronic Travel Authorization applications in the next year. </p>
-
-
-			<h4>Outcomes</h4>
-
-			<p>Potential visitors to Canada can better understand what documentation they need to enter.</p>
+		
+			<ul>
+			<li class="custli"><abbr title="Immigration, Refugees and Citizenship Canada">IRCC</abbr> processes about 1,000,000 Visa applications a year</li>
+			<li class="custli"><abbr title="Immigration, Refugees and Citizenship Canada">IRCC</abbr> expects 3,200,000 Electronic Travel Authorization applications this year</li>
+			</ul>
+	<br>
 
 			<div class="table-bravo">
 								<table class="table table-slim">
@@ -197,7 +190,7 @@ make it easier.</p>
 									</table>
 
 
-				<h4 style="margin-top: 0px;">Tasks improved</h4>
+				<h4 style="margin-top: 0px;">Task scenarios tested and improved</h4>
 
 												<div>
 
@@ -227,19 +220,24 @@ make it easier.</p>
 					<summary class="borderless">  <h3 class="timeline-title">Weather</h3><div class="summary-custom"><div></summary>
 
 
-	<h4>Partner departments</h4>
+	<h4>Partner department</h4>
 
-		<p>Environment and Climate Change Canada</p>
+	<p>Environment and Climate Change Canada</p>
 
-	<h4>Why this work matters</h4>
+	
+	<h4>Objective</h4>
 
-		<p>There are more than 550 million visits to weather.gc.ca annually.</p>
+			<p>Make it easier for Canadians to understand notifications about dangerous weather conditions.</p>
 
 
-	<h4>Outcomes</h4>
-
-		<p>Canadians are better prepared for high impact weather conditions.</p>
-
+			<h4>Why this work matters</h4>
+		
+			<ul>
+			<li class="custli">Canadians check the weather with the <abbr title="Government of Canada">GC</abbr> more than they do anything else</li>
+			<li class="custli">More than 550,000,000 visits to weather.gc.ca annually</li>
+			</ul>
+		
+<br>
 
 		<div class="table-bravo">
 										<table class="table table-slim">
@@ -257,7 +255,7 @@ make it easier.</p>
 										</table>
 
 
-			<h4 style="margin-top: 0px;">Tasks improved</h4>
+			<h4 style="margin-top: 0px;">Task scenarios tested and improved</h4>
 
 
 														<div>
@@ -296,17 +294,22 @@ make it easier.</p>
 <details >
 					<summary class="borderless">  <h3 class="timeline-title">Diseases and Vaccinations</h3> <div class="summary-custom"><div></summary>
 
-						<h4>Partner departments</h4>
+			<h4>Partner departments</h4>
 
-						<p>Health Canada; Global Affairs Canada</p>
+			<p>Health Canada; Global Affairs Canada</p>
 
-						<h4>Why this work matters</h4>
+			<h4>Objective</h4>
 
-						<p>Flu cases result in approximately 12 thousand hospitalizations in Canada each year. </p>
+			<p>Make it easier for Canadians to interpret immunization guidelines.</p>
 
-						<h4>Outcomes</h4>
 
-						<p>Canadians can more easily find and interpret disease symptoms and immunization guidelines.</p>
+			<h4>Why this work matters</h4>
+	
+			<ul>
+			<li class="custli">Flu cases result in nearly 12,000 hospitalizations in Canada each year</li>
+			<li class="custli">Only 50% of users could find and complete certain tasks related to this task</li>
+			</ul>
+		<br>
 
 						<div class="table-bravo">
 
@@ -325,7 +328,7 @@ make it easier.</p>
 															  </table>
 
 
-					<h4 style="margin-top: 0px;">Tasks improved</h4>
+					<h4 style="margin-top: 0px;">Task scenarios tested and improved</h4>
 
 																<div>
 
@@ -362,13 +365,17 @@ make it easier.</p>
 
 						<p>Canada Revenue Agency</p>
 
-						<h4>Why this work matters</h4>
+			<h4>Objective</h4>
 
-						<p>There are 5.4  million active GST/HST accounts in Canada, and more than 1.7 million active payroll accounts. </p>
+			<p>Make it easier for businesses to fulfill their GST/HST and payroll requirements.</p>
 
-						<h4>Outcomes</h4>
 
-						<p>Canadian businesses can more easily fulfill their GST/HST and payroll requirements.</p>
+			<h4>Why this work matters</h4>
+		
+			<ul>
+			<li class="custli">There are 5,400,000 active GST/HST accounts in Canada and 1,700,000 active Payroll accounts in Canada</li>
+			</ul>
+			<br>
 
 											<div class="table-bravo">
 
@@ -385,7 +392,7 @@ make it easier.</p>
 																						</tr></tbody></table>
 
 
-						<h4 style="margin-top: 0px;">Tasks improved</h4>
+						<h4 style="margin-top: 0px;">Task scenarios tested and improved</h4>
 
 																						<div>
 
@@ -417,13 +424,18 @@ make it easier.</p>
 
 									<p>Employment and Social Development Canada</p>
 
-									<h4>Why this work matters</h4>
+			<h4>Objective</h4>
 
-									<p>Thousands of Canadians receive the family caregiver and compassionate care benefits each year.</p>
+			<p>Make it easier for Canadians to understand eligibility for caregiver benefits.</p>
 
-									<h4>Outcomes</h4>
 
-									<p>Canadians can more easily find out if they are eligible to receive caregiver benefits when looking after loved ones who are sick or dying.</p>
+			<h4>Why this work matters</h4>
+		
+			<ul>
+			<li class="custli">Thousands of Canadians receive the family caregiver and compassionate care benefits each year</li>
+			<li class="custli">Only 52% of users could find and complete certain tasks related to this task</li>
+			</ul>
+			<br>
 
 															<div class="table-bravo">
 																												<table class="table table-slim">
@@ -439,15 +451,18 @@ make it easier.</p>
 																												</tr></tbody></table>
 
 
-							<h4 style="margin-top: 0px;">Tasks improved</h4>
+							<h4 style="margin-top: 0px;">Task scenarios tested and improved</h4>
 
 																												<div>
 
 																		<ul class="custul">
 																				<li class="custli">Darren has been working full-time and making EI contributions for 5 months. Is that enough for him to qualify for government support to take time off work to look after his sick 8-year-old son?</li>
 																				<li class="custli">What information would Chen need from his employer to support an application to take time off from work to look after his sick wife?</li>
+																				<li class="custli">Tara has applied for government support to take time off work to look after her sick 12-year-old daughter. When will she receive her first payment?</li>
+																				<li class="custli">Could you show me how you would apply for government help to take time off work to look after a sick parent?</li>
 																				<li class="custli">Omar is receiving government support to take time off work and look after an aunt who is ill. The relative's illness has suddenly become much worse, and she may not survive it. Omar has heard there is separate support to care for someone who may be near death. When can he apply for this?</li>
 																				<li class="custli">John's 6-year-old daughter is ill. How does John show that she is sick enough for him to qualify for government support to look after her?</li>
+																				<li class="custli">Irina’s father has fallen seriously ill. Her best friend Jane will take time off work to look after him. As Jane is not a member of the family, what will Irina need to do to support Jane's application?</li>
 
 																								</ul>
 
@@ -504,7 +519,7 @@ make it easier.</p>
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2017-12-07",
+		dateModified: "April 25, 2018",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
